# ChangeLog for media-sound/gnormalize
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Apr 2007; Jakub Moc <jakub@gentoo.org> gnormalize-0.52.ebuild:
  Fix desktop entry

  03 Dec 2006; Juan Aguado (juantxorena) <juantxorena666@gmail.com>
  -gnormalize-0.51.ebuild, +gnormalize-0.52.ebuild:
  Version bump

  07 Nov 2006; Juan Aguado (juantxorena) <juantxorena666@gmail.com>
  gnormalize-0.51.ebuild:
  Add ~amd64 keyword

  03 Nov 2006; Raul Porcel (armin76) <armin76@gmail.com>
  -gnormalize-0.50.ebuild:
  drop old

  28 Sep 2006; Alex Tarkovsky <alextarkovsky@gmail.org>
  +gnormalize-0.51.ebuild:
  Bumping to 0.51, no changes from previous ebuild

  05 Sep 2006; Alex Tarkovsky <alextarkovsky@gmail.org>
  +gnormalize-0.50.ebuild, +metadata.xml:
  New ebuild for bug 92284. Thanks to Tom <gimpel@sonnenkinder.org>, Sebastien
  Fabbro <seb@ist.utl.pt> and Tristan Heaven <tristanheaven@gmail.com>
