@@ -1,4 +1,4 @@
 DIST gnormalize-0.63.tar.gz 1586211 RMD160 06d2f1ebccfd1fd78ab50b9a9c2c6ffd5cc1cda0 SHA1 6ca2bb1c441c98dfdf5158943123facd8fa887a0 SHA256 80fd9aa2da8d7fcc88bd180be2adce1aed863bedba7d715144029bd95b61ccb6
-EBUILD gnormalize-0.63.ebuild 1568 RMD160 f9ce051f4aa4d10984e74716dba54f6ad8d2836b SHA1 fd0909388720f97bb0af2020cddb447f4ef3a1f6 SHA256 4e300e347e3db9b384a70411a674d798c4dff208802945a4326a83f6294c4479
-MISC ChangeLog 944 RMD160 24a2ae6c7f6808d8373a8feaee3264d6088fb002 SHA1 bd5899fa670741340fd244a22d2df12e10422658 SHA256 6584247867965344b4ced377604d4db80203fb2280fa7d55517febdeadb16f73
+EBUILD gnormalize-0.63.ebuild 1570 RMD160 879bd7b724019eaa66fb5852895a4ad45e414f66 SHA1 1dd819d16e2eb0ba2bfe5a30431dab4b8fb0bf8a SHA256 7c8afb8c6dd58a7ff77fc64856c180e129e7c91366c6ddc8f994d33ef60964c7
+MISC ChangeLog 1066 RMD160 76dd707697e31d4aaf11a9f177b45e79aefc402d SHA1 08f61da1822bb85dd8abd0c9524ec5b9818369e0 SHA256 6056cd4f5e4b002b4daefd419ab865e9db0a96dd8cbcccea30cf14a9729d6396
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
