@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/gnormalize
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  gnormalize-0.63.ebuild:
+  Dobin should have a die, simplify
 
   05 Apr 2007; Jakub Moc <jakub@gentoo.org> gnormalize-0.52.ebuild:
   Fix desktop entry
